--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -21,6 +21,7 @@
                 android:layout_height="125dp"
                 android:layout_gravity="center_vertical|center_horizontal|center"
                 android:layout_marginTop="10dp"
+                android:scaleType="fitXY"
                 app:srcCompat="@drawable/user_box_photo" />
 
             <EditText
