--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,8 +27,8 @@
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:layout_margin="25dp"
+                        android:layout_height="140dp"
+                        android:layout_margin="20dp"
                         app:srcCompat="@drawable/logo_community" />
 
                 </RelativeLayout>
@@ -38,7 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="center_horizontal|center"
                     android:text="Correo electrónico:"
                     android:textSize="20sp" />
@@ -92,6 +92,24 @@
                     android:text="     Iniciar sesión     "
                     android:textColor="@android:color/background_light"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Todavía no tienes una cuenta en Community?"
+                     />
+
+                <TextView
+                    android:id="@+id/txtRegistrar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:onClick="registerClicked"
+                    android:text="Regístrate aquí"
+                    android:textAlignment="center"
+                    android:textColor="#0066ff" />
             </LinearLayout>
         </ScrollView>
 
